name SADL to RADAR all

--- a/notebooks_test/test_flexanomalies_ts.ipynb
+++ b/notebooks_test/test_flexanomalies_ts.ipynb
@@ -14,9 +14,7 @@
    "outputs": [],
    "source": [
     "import sys\n",
-    "import pandas as pd\n",
-    "import numpy as np\n",
-    "sys.path.append(\".../ADL_platform//S-ADL\") # dir library"
+    "sys.path.append(\".../RADAR_Plataform/RADAR\") # dir library"
    ]
   },
   {
@@ -28,21 +26,21 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "2025-10-01 18:30:00.487926: I tensorflow/core/util/port.cc:153] oneDNN custom operations are on. You may see slightly different numerical results due to floating-point round-off errors from different computation orders. To turn them off, set the environment variable `TF_ENABLE_ONEDNN_OPTS=0`.\n",
-      "2025-10-01 18:30:00.499864: E external/local_xla/xla/stream_executor/cuda/cuda_fft.cc:477] Unable to register cuFFT factory: Attempting to register factory for plugin cuFFT when one has already been registered\n",
+      "2025-10-14 13:40:21.712155: I tensorflow/core/util/port.cc:153] oneDNN custom operations are on. You may see slightly different numerical results due to floating-point round-off errors from different computation orders. To turn them off, set the environment variable `TF_ENABLE_ONEDNN_OPTS=0`.\n",
+      "2025-10-14 13:40:21.755324: E external/local_xla/xla/stream_executor/cuda/cuda_fft.cc:477] Unable to register cuFFT factory: Attempting to register factory for plugin cuFFT when one has already been registered\n",
       "WARNING: All log messages before absl::InitializeLog() is called are written to STDERR\n",
-      "E0000 00:00:1759336200.514375   11304 cuda_dnn.cc:8310] Unable to register cuDNN factory: Attempting to register factory for plugin cuDNN when one has already been registered\n",
-      "E0000 00:00:1759336200.518539   11304 cuda_blas.cc:1418] Unable to register cuBLAS factory: Attempting to register factory for plugin cuBLAS when one has already been registered\n",
-      "2025-10-01 18:30:00.533941: I tensorflow/core/platform/cpu_feature_guard.cc:210] This TensorFlow binary is optimized to use available CPU instructions in performance-critical operations.\n",
+      "E0000 00:00:1760442021.772636   40464 cuda_dnn.cc:8310] Unable to register cuDNN factory: Attempting to register factory for plugin cuDNN when one has already been registered\n",
+      "E0000 00:00:1760442021.777619   40464 cuda_blas.cc:1418] Unable to register cuBLAS factory: Attempting to register factory for plugin cuBLAS when one has already been registered\n",
+      "2025-10-14 13:40:21.796727: I tensorflow/core/platform/cpu_feature_guard.cc:210] This TensorFlow binary is optimized to use available CPU instructions in performance-critical operations.\n",
       "To enable the following instructions: AVX2 AVX512F AVX512_VNNI FMA, in other operations, rebuild TensorFlow with the appropriate compiler flags.\n"
      ]
     }
    ],
    "source": [
     "from flexanomalies.datasets.preprocessing_utils import scaling\n",
-    "from SADL.federated_data.algorithms import flexanomalies\n",
-    "from SADL.time_series.time_series_utils import TimeSeriesProcessor\n",
-    "from SADL.time_series.time_series_datasets_uci import global_load as load_time_series \n",
+    "from RADAR.federated_data.algorithms import flexanomalies\n",
+    "from RADAR.time_series.time_series_utils import TimeSeriesProcessor\n",
+    "from RADAR.time_series.time_series_datasets_uci import global_load as load_time_series \n",
     "from sklearn.model_selection import train_test_split"
    ]
   },
@@ -120,7 +118,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from SADL.time_series.preprocessing.preprocessing_ts import StandardScalerPreprocessing \n",
+    "from RADAR.time_series.preprocessing.preprocessing_ts import StandardScalerPreprocessing \n",
     "scaler = StandardScalerPreprocessing()\n",
     "X_scaled = scaler.fit_transform(X)\n"
    ]
@@ -169,7 +167,7 @@
       "model_path: \n",
       "w_size: 10\n",
       "n_pred: 1\n",
-      "callbacks: [<keras.src.callbacks.early_stopping.EarlyStopping object at 0x7fead9eac520>]\n",
+      "callbacks: [<keras.src.callbacks.early_stopping.EarlyStopping object at 0x70ea4119bca0>]\n",
       "hidden_act: ['relu', 'relu', 'relu']\n",
       "output_act: linear\n",
       "loss: mse\n",
@@ -182,16 +180,16 @@
       "model: <Sequential name=sequential_1, built=True>\n",
       "algorithm_: autoencoder\n",
       "label_parser: None\n",
-      "{'label_parser': None, 'algorithm_': 'autoencoder', 'contamination': 0.1, 'input_dim': 5, 'neurons': [16, 8, 16], 'model_path': '', 'w_size': 10, 'n_pred': 1, 'callbacks': [<keras.src.callbacks.early_stopping.EarlyStopping object at 0x7fead9eac520>], 'hidden_act': ['relu', 'relu', 'relu'], 'output_act': 'linear', 'loss': 'mse', 'validation_size': 0.2, 'batch_size': 16, 'epochs': 3, 'optimizer': 'adam', 'preprocess': False, 'scaler': StandardScaler(), 'model': <Sequential name=sequential_1, built=True>}\n"
+      "{'label_parser': None, 'algorithm_': 'autoencoder', 'contamination': 0.1, 'input_dim': 5, 'neurons': [16, 8, 16], 'model_path': '', 'w_size': 10, 'n_pred': 1, 'callbacks': [<keras.src.callbacks.early_stopping.EarlyStopping object at 0x70ea4119bca0>], 'hidden_act': ['relu', 'relu', 'relu'], 'output_act': 'linear', 'loss': 'mse', 'validation_size': 0.2, 'batch_size': 16, 'epochs': 3, 'optimizer': 'adam', 'preprocess': False, 'scaler': StandardScaler(), 'model': <Sequential name=sequential_1, built=True>}\n"
      ]
     },
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/data/Beatriz/Doctorado GR/ADL_platform/S-ADL/venv/lib/python3.10/site-packages/keras/src/layers/core/dense.py:87: UserWarning: Do not pass an `input_shape`/`input_dim` argument to a layer. When using Sequential models, prefer using an `Input(shape)` object as the first layer in the model instead.\n",
+      "/data/Beatriz/Doctorado GR/RADAR_Plataform/RADAR/.venv/lib/python3.9/site-packages/keras/src/layers/core/dense.py:87: UserWarning: Do not pass an `input_shape`/`input_dim` argument to a layer. When using Sequential models, prefer using an `Input(shape)` object as the first layer in the model instead.\n",
       "  super().__init__(activity_regularizer=activity_regularizer, **kwargs)\n",
-      "2025-10-01 18:30:07.569240: E external/local_xla/xla/stream_executor/cuda/cuda_driver.cc:152] failed call to cuInit: INTERNAL: CUDA error: Failed call to cuInit: UNKNOWN ERROR (303)\n"
+      "2025-10-14 13:42:06.520093: E external/local_xla/xla/stream_executor/cuda/cuda_driver.cc:152] failed call to cuInit: INTERNAL: CUDA error: Failed call to cuInit: UNKNOWN ERROR (303)\n"
      ]
     }
    ],
@@ -601,7 +599,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from SADL.visualization_module import DataVisualizationScoresTS\n",
+    "from RADAR.visualization_module import DataVisualizationScoresTS\n",
     "visualizer = DataVisualizationScoresTS(scores_pred.ravel())\n",
     "fig = visualizer.visualize(method=\"percentile\", threshold=0.95)  # percentil\n",
     "fig.show()"
@@ -1167,7 +1165,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from SADL.visualization_module import DataVisualizationScoresTS\n",
+    "from RADAR.visualization_module import DataVisualizationScoresTS\n",
     "visualizer = DataVisualizationScoresTS(scores_pred.ravel())\n",
     "fig = visualizer.visualize(method=\"percentile\", threshold=0.95)  # percentil\n",
     "fig.show()"
@@ -1190,7 +1188,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.12"
+   "version": "3.9.12"
   }
  },
  "nbformat": 4,
