--- a/notebooks_test/test_load_preprocess_datasets.ipynb
+++ b/notebooks_test/test_load_preprocess_datasets.ipynb
@@ -7,7 +7,7 @@
    "outputs": [],
    "source": [
     "import sys\n",
-    "sys.path.append(\".../ADL_platform//S-ADL\") # dir library"
+    "sys.path.append(\".../RADAR_Plataform/RADAR\") # dir library"
    ]
   },
   {
@@ -19,18 +19,18 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "2025-09-22 21:36:08.852115: I tensorflow/core/util/port.cc:153] oneDNN custom operations are on. You may see slightly different numerical results due to floating-point round-off errors from different computation orders. To turn them off, set the environment variable `TF_ENABLE_ONEDNN_OPTS=0`.\n",
-      "2025-09-22 21:36:09.029028: E external/local_xla/xla/stream_executor/cuda/cuda_fft.cc:477] Unable to register cuFFT factory: Attempting to register factory for plugin cuFFT when one has already been registered\n",
+      "2025-10-14 13:46:05.999969: I tensorflow/core/util/port.cc:153] oneDNN custom operations are on. You may see slightly different numerical results due to floating-point round-off errors from different computation orders. To turn them off, set the environment variable `TF_ENABLE_ONEDNN_OPTS=0`.\n",
+      "2025-10-14 13:46:06.019099: E external/local_xla/xla/stream_executor/cuda/cuda_fft.cc:477] Unable to register cuFFT factory: Attempting to register factory for plugin cuFFT when one has already been registered\n",
       "WARNING: All log messages before absl::InitializeLog() is called are written to STDERR\n",
-      "E0000 00:00:1758569769.092457   43784 cuda_dnn.cc:8310] Unable to register cuDNN factory: Attempting to register factory for plugin cuDNN when one has already been registered\n",
-      "E0000 00:00:1758569769.111868   43784 cuda_blas.cc:1418] Unable to register cuBLAS factory: Attempting to register factory for plugin cuBLAS when one has already been registered\n",
-      "2025-09-22 21:36:09.273335: I tensorflow/core/platform/cpu_feature_guard.cc:210] This TensorFlow binary is optimized to use available CPU instructions in performance-critical operations.\n",
+      "E0000 00:00:1760442366.043557   41081 cuda_dnn.cc:8310] Unable to register cuDNN factory: Attempting to register factory for plugin cuDNN when one has already been registered\n",
+      "E0000 00:00:1760442366.050605   41081 cuda_blas.cc:1418] Unable to register cuBLAS factory: Attempting to register factory for plugin cuBLAS when one has already been registered\n",
+      "2025-10-14 13:46:06.074916: I tensorflow/core/platform/cpu_feature_guard.cc:210] This TensorFlow binary is optimized to use available CPU instructions in performance-critical operations.\n",
       "To enable the following instructions: AVX2 AVX512F AVX512_VNNI FMA, in other operations, rebuild TensorFlow with the appropriate compiler flags.\n"
      ]
     }
    ],
    "source": [
-    "from SADL.static_data.static_datasets_uci import global_load"
+    "from RADAR.static_data.static_datasets_uci import global_load"
    ]
   },
   {
@@ -42,7 +42,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -389,7 +389,7 @@
        "[451 rows x 280 columns]"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -439,7 +439,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from SADL.static_data.preprocessing.preprocessing_static import OneHotEncoderPreprocessing,StandardScalerPreprocessing \n",
+    "from RADAR.static_data.preprocessing.preprocessing_static import OneHotEncoderPreprocessing,StandardScalerPreprocessing \n",
     "cat_columns = [\"protocol_type\", \"service\", \"flag\", \"land\", \"logged_in\", \"is_host_login\", \"is_guest_login\"] # Changed to list\n",
     "float_columns = list(set(data.columns) - set(cat_columns) - {\"attack_type\"}) # Converted cat_columns to set for set operations\n",
     "\n",
@@ -463,7 +463,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -599,7 +599,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -660,46 +660,19 @@
       "22             no  \n",
       "23             no  \n",
       "24             no  \n",
-      "X:           X1  X2  X3  X4  X5  X6  X7  X8  X9  X10  ...     X14    X15    X16  \\\n",
-      "0       20000   2   2   1  24   2   2  -1  -1   -2  ...     689      0      0   \n",
-      "1      120000   2   2   2  26  -1   2   0   0    0  ...    2682   3272   3455   \n",
-      "2       90000   2   2   2  34   0   0   0   0    0  ...   13559  14331  14948   \n",
-      "3       50000   2   2   1  37   0   0   0   0    0  ...   49291  28314  28959   \n",
-      "4       50000   1   2   1  57  -1   0  -1   0    0  ...   35835  20940  19146   \n",
-      "...       ...  ..  ..  ..  ..  ..  ..  ..  ..  ...  ...     ...    ...    ...   \n",
-      "29995  220000   1   3   1  39   0   0   0   0    0  ...  208365  88004  31237   \n",
-      "29996  150000   1   3   2  43  -1  -1  -1  -1    0  ...    3502   8979   5190   \n",
-      "29997   30000   1   2   2  37   4   3   2  -1    0  ...    2758  20878  20582   \n",
-      "29998   80000   1   3   1  41   1  -1   0   0    0  ...   76304  52774  11855   \n",
-      "29999   50000   1   2   1  46   0   0   0   0    0  ...   49764  36535  32428   \n",
-      "\n",
-      "         X17    X18    X19    X20   X21    X22   X23  \n",
-      "0          0      0    689      0     0      0     0  \n",
-      "1       3261      0   1000   1000  1000      0  2000  \n",
-      "2      15549   1518   1500   1000  1000   1000  5000  \n",
-      "3      29547   2000   2019   1200  1100   1069  1000  \n",
-      "4      19131   2000  36681  10000  9000    689   679  \n",
-      "...      ...    ...    ...    ...   ...    ...   ...  \n",
-      "29995  15980   8500  20000   5003  3047   5000  1000  \n",
-      "29996      0   1837   3526   8998   129      0     0  \n",
-      "29997  19357      0      0  22000  4200   2000  3100  \n",
-      "29998  48944  85900   3409   1178  1926  52964  1804  \n",
-      "29999  15313   2078   1800   1430  1000   1000  1000  \n",
-      "\n",
-      "[30000 rows x 23 columns], y:       Y\n",
-      "0      1\n",
-      "1      1\n",
-      "2      0\n",
-      "3      0\n",
-      "4      0\n",
-      "...   ..\n",
-      "29995  0\n",
-      "29996  0\n",
-      "29997  1\n",
-      "29998  1\n",
-      "29999  1\n",
-      "\n",
-      "[30000 rows x 1 columns]\n"
+      "X:[[ 20000      2      2 ...      0      0      0]\n",
+      " [120000      2      2 ...   1000      0   2000]\n",
+      " [ 90000      2      2 ...   1000   1000   5000]\n",
+      " ...\n",
+      " [ 30000      1      2 ...   4200   2000   3100]\n",
+      " [ 80000      1      3 ...   1926  52964   1804]\n",
+      " [ 50000      1      2 ...   1000   1000   1000]], y:[[1]\n",
+      " [1]\n",
+      " [0]\n",
+      " ...\n",
+      " [1]\n",
+      " [1]\n",
+      " [1]]\n"
      ]
     }
    ],
@@ -854,7 +827,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from SADL.time_series.time_series_datasets_uci import global_load as load_time_series"
+    "from RADAR.time_series.time_series_datasets_uci import global_load as load_time_series"
    ]
   },
   {
@@ -2042,12 +2015,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
-    "from SADL.time_series.time_series_datasets_uci import global_load as load_time_series\n",
-    "from SADL.static_data.preprocessing.preprocessing_static import OneHotEncoderPreprocessing,StandardScalerPreprocessing \n"
+    "from RADAR.time_series.time_series_datasets_uci import global_load as load_time_series\n",
+    "from RADAR.static_data.preprocessing.preprocessing_static import OneHotEncoderPreprocessing,StandardScalerPreprocessing \n"
    ]
   },
   {
@@ -2059,22 +2032,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "2025-03-19 16:55:39.435779: I tensorflow/core/util/port.cc:153] oneDNN custom operations are on. You may see slightly different numerical results due to floating-point round-off errors from different computation orders. To turn them off, set the environment variable `TF_ENABLE_ONEDNN_OPTS=0`.\n",
-      "2025-03-19 16:55:39.447675: E external/local_xla/xla/stream_executor/cuda/cuda_fft.cc:477] Unable to register cuFFT factory: Attempting to register factory for plugin cuFFT when one has already been registered\n",
-      "WARNING: All log messages before absl::InitializeLog() is called are written to STDERR\n",
-      "E0000 00:00:1742399739.461746  267089 cuda_dnn.cc:8310] Unable to register cuDNN factory: Attempting to register factory for plugin cuDNN when one has already been registered\n",
-      "E0000 00:00:1742399739.465877  267089 cuda_blas.cc:1418] Unable to register cuBLAS factory: Attempting to register factory for plugin cuBLAS when one has already been registered\n",
-      "2025-03-19 16:55:39.480981: I tensorflow/core/platform/cpu_feature_guard.cc:210] This TensorFlow binary is optimized to use available CPU instructions in performance-critical operations.\n",
-      "To enable the following instructions: AVX2 AVX512F AVX512_VNNI FMA, in other operations, rebuild TensorFlow with the appropriate compiler flags.\n"
-     ]
-    },
     {
      "name": "stdout",
      "output_type": "stream",
@@ -2464,7 +2424,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.12"
+   "version": "3.9.12"
   }
  },
  "nbformat": 4,
