--- a/notebooks_test/test_transformers.ipynb
+++ b/notebooks_test/test_transformers.ipynb
@@ -2,37 +2,37 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
     "import sys\n",
-    "sys.path.append(\".../ADL_platform//S-ADL\")  # dir library\n"
+    "sys.path.append(\".../RADAR_Plataform/RADAR\") # dir library\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "2025-09-29 21:46:37.760176: I tensorflow/core/util/port.cc:153] oneDNN custom operations are on. You may see slightly different numerical results due to floating-point round-off errors from different computation orders. To turn them off, set the environment variable `TF_ENABLE_ONEDNN_OPTS=0`.\n",
-      "2025-09-29 21:46:37.772441: E external/local_xla/xla/stream_executor/cuda/cuda_fft.cc:477] Unable to register cuFFT factory: Attempting to register factory for plugin cuFFT when one has already been registered\n",
+      "2025-10-14 13:58:12.216865: I tensorflow/core/util/port.cc:153] oneDNN custom operations are on. You may see slightly different numerical results due to floating-point round-off errors from different computation orders. To turn them off, set the environment variable `TF_ENABLE_ONEDNN_OPTS=0`.\n",
+      "2025-10-14 13:58:12.229436: E external/local_xla/xla/stream_executor/cuda/cuda_fft.cc:477] Unable to register cuFFT factory: Attempting to register factory for plugin cuFFT when one has already been registered\n",
       "WARNING: All log messages before absl::InitializeLog() is called are written to STDERR\n",
-      "E0000 00:00:1759175197.788862    7819 cuda_dnn.cc:8310] Unable to register cuDNN factory: Attempting to register factory for plugin cuDNN when one has already been registered\n",
-      "E0000 00:00:1759175197.793069    7819 cuda_blas.cc:1418] Unable to register cuBLAS factory: Attempting to register factory for plugin cuBLAS when one has already been registered\n",
-      "2025-09-29 21:46:37.808697: I tensorflow/core/platform/cpu_feature_guard.cc:210] This TensorFlow binary is optimized to use available CPU instructions in performance-critical operations.\n",
+      "E0000 00:00:1760443092.243481   41992 cuda_dnn.cc:8310] Unable to register cuDNN factory: Attempting to register factory for plugin cuDNN when one has already been registered\n",
+      "E0000 00:00:1760443092.247428   41992 cuda_blas.cc:1418] Unable to register cuBLAS factory: Attempting to register factory for plugin cuBLAS when one has already been registered\n",
+      "2025-10-14 13:58:12.262561: I tensorflow/core/platform/cpu_feature_guard.cc:210] This TensorFlow binary is optimized to use available CPU instructions in performance-critical operations.\n",
       "To enable the following instructions: AVX2 AVX512F AVX512_VNNI FMA, in other operations, rebuild TensorFlow with the appropriate compiler flags.\n"
      ]
     }
    ],
    "source": [
-    "from SADL.time_series.algorithms import transformers\n",
-    "from SADL.time_series.time_series_utils import TimeSeriesProcessor\n",
-    "from SADL.visualization_module import DataVisualization, DataVisualizationScoresTS\n",
+    "from RADAR.time_series.algorithms import transformers\n",
+    "from RADAR.time_series.time_series_utils import TimeSeriesProcessor\n",
+    "from RADAR.visualization_module import DataVisualization, DataVisualizationScoresTS\n",
     "import numpy as np\n",
     "import torch"
    ]
@@ -46,7 +46,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -89,7 +89,7 @@
     }
    ],
    "source": [
-    "from SADL.time_series.time_series_datasets_uci import global_load as load_time_series \n",
+    "from RADAR.time_series.time_series_datasets_uci import global_load as load_time_series \n",
     "from sklearn.model_selection import train_test_split\n",
     "X,y = load_time_series('ai4i_2020_predictive_maintenance_dataset')   #name dataset in static datasets uci repo\n",
     "labels = y[\"Machine failure\"]\n",
@@ -98,7 +98,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -110,7 +110,7 @@
     }
    ],
    "source": [
-    "from SADL.time_series.preprocessing.preprocessing_ts import StandardScalerPreprocessing \n",
+    "from RADAR.time_series.preprocessing.preprocessing_ts import StandardScalerPreprocessing \n",
     "scaler = StandardScalerPreprocessing()\n",
     "X_scaled = scaler.fit_transform(X)\n",
     "X_train, X_test, y_train, y_test = train_test_split(X_scaled, labels, test_size=0.2, random_state=42)\n",
@@ -126,15 +126,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Train Params: {'label_parser': None, 'train_epochs': 5, 'batch_size': 16, 'lr': 0.001} \n",
-      "Model Params: {'algorithm_': 'Transformer', 'size_enc_in': 5, 'size_dec_in': 5, 'ulayers_feedfwd': 128, 'seq_len': 24, 'd_qk': 64, 'd_v': 64, 'd_model': 64, 'n_layers': 2, 'n_heads': 8, 'dropout_rate': 0.1, 'attns_outs': False}\n"
+      "Train Params: {'label_parser': None, 'train_epochs': 10, 'batch_size': 16, 'lr': 0.001} \n",
+      "Model Params: {'algorithm_': 'transformer', 'size_enc_in': 5, 'size_dec_in': 5, 'ulayers_feedfwd': 128, 'seq_len': 24, 'd_qk': 64, 'd_v': 64, 'd_model': 64, 'n_layers': 2, 'n_heads': 8, 'dropout_rate': 0.1, 'attns_outs': False}\n"
      ]
     }
    ],
@@ -182,7 +182,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -207,16 +207,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/data/Beatriz/Doctorado GR/ADL_platform/S-ADL/venv/lib/python3.10/site-packages/torch/nn/modules/loss.py:610: UserWarning: Using a target size (torch.Size([16, 24, 5])) that is different to the input size (torch.Size([24, 5])). This will likely lead to incorrect results due to broadcasting. Please ensure they have the same size.\n",
+      "/data/Beatriz/Doctorado GR/RADAR_Plataform/RADAR/.venv/lib/python3.9/site-packages/torch/nn/modules/loss.py:610: UserWarning: Using a target size (torch.Size([16, 24, 5])) that is different to the input size (torch.Size([24, 5])). This will likely lead to incorrect results due to broadcasting. Please ensure they have the same size.\n",
       "  return F.mse_loss(input, target, reduction=self.reduction)\n",
-      "/data/Beatriz/Doctorado GR/ADL_platform/S-ADL/venv/lib/python3.10/site-packages/torch/nn/modules/loss.py:610: UserWarning: Using a target size (torch.Size([9, 24, 5])) that is different to the input size (torch.Size([24, 5])). This will likely lead to incorrect results due to broadcasting. Please ensure they have the same size.\n",
+      "/data/Beatriz/Doctorado GR/RADAR_Plataform/RADAR/.venv/lib/python3.9/site-packages/torch/nn/modules/loss.py:610: UserWarning: Using a target size (torch.Size([9, 24, 5])) that is different to the input size (torch.Size([24, 5])). This will likely lead to incorrect results due to broadcasting. Please ensure they have the same size.\n",
       "  return F.mse_loss(input, target, reduction=self.reduction)\n"
      ]
     },
@@ -224,20 +224,25 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Epoch 1/5, Loss: 1.004393\n",
-      "Epoch 2/5, Loss: 0.980808\n",
-      "Epoch 3/5, Loss: 0.979639\n",
-      "Epoch 4/5, Loss: 0.979225\n",
-      "Epoch 5/5, Loss: 0.973495\n"
+      "Epoch 1/10, Loss: 1.007264\n",
+      "Epoch 2/10, Loss: 0.979617\n",
+      "Epoch 3/10, Loss: 0.975353\n",
+      "Epoch 4/10, Loss: 0.996108\n",
+      "Epoch 5/10, Loss: 1.003654\n",
+      "Epoch 6/10, Loss: 1.002857\n",
+      "Epoch 7/10, Loss: 1.002469\n",
+      "Epoch 8/10, Loss: 1.002379\n",
+      "Epoch 9/10, Loss: 1.002286\n",
+      "Epoch 10/10, Loss: 1.002137\n"
      ]
     },
     {
      "data": {
       "text/plain": [
-       "<SADL.time_series.algorithms.transformers.TransformersAnomalyDetection at 0x7f6f1efc45b0>"
+       "<RADAR.time_series.algorithms.transformers.TransformersAnomalyDetection at 0x7e60130143a0>"
       ]
      },
-     "execution_count": 13,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -249,9 +254,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Anomaly scores: torch.Size([7977])\n",
+      "Predicted labels: torch.Size([191448, 5])\n"
+     ]
+    }
+   ],
    "source": [
     "scores = model.decision_function(X_train_windows)\n",
     "labels = model.predict(X_train_windows)\n",
@@ -262,9 +276,33 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Accuracy: 96.291%\n",
+      "F1 Score: 0.142\n",
+      "Recall: 0.104\n",
+      "Precision: 0.225\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "{'scores': array([ 0.43089256,  1.0358208 ,  0.6022974 , ...,  1.6290067 ,\n",
+       "        12.2048235 ,  1.5705751 ], dtype=float32),\n",
+       " 'labels_preds': array([0, 0, 0, ..., 0, 1, 0]),\n",
+       " 'labels_true': tensor([0, 1, 0,  ..., 0, 1, 0])}"
+      ]
+     },
+     "execution_count": 12,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "model.evaluate(X_test_windows,y_test_windows)"
    ]
@@ -3703,7 +3741,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.12"
+   "version": "3.9.12"
   }
  },
  "nbformat": 4,
