--- a/notebooks_test/test_visualizacion.ipynb
+++ b/notebooks_test/test_visualizacion.ipynb
@@ -8,8 +8,8 @@
    "source": [
     "import sys\n",
     "import numpy as np\n",
-    "sys.path.append(\".../S-ADL\")\n",
-    "from SADL.visualization_module import DataVisualization\n"
+    "sys.path.append(\".../RADAR\")\n",
+    "from RADAR.visualization_module import DataVisualization\n"
    ]
   },
   {
@@ -108,8 +108,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from SADL.visualization_module import DataVisualization\n",
-    "from SADL.static_data.static_datasets_uci import global_load\n",
+    "from RADAR.visualization_module import DataVisualization\n",
+    "from RADAR.static_data.static_datasets_uci import global_load\n",
     "from sklearn.model_selection import train_test_split\n",
     "\n",
     "#from flexanomalies.utils.load_data import load_and_split_dot_mat\n",
@@ -127,7 +127,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from SADL.federated_data.algorithms import flexanomalies\n",
+    "from RADAR.federated_data.algorithms import flexanomalies\n",
     "\n",
     "kwargs = {\n",
     "    \"algorithm_\": \"autoencoder\",\n",
@@ -152,7 +152,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from SADL.static_data.preprocessing.preprocessing_static import StandardScalerPreprocessing \n",
+    "from RADAR.static_data.preprocessing.preprocessing_static import StandardScalerPreprocessing \n",
     "scaler = StandardScalerPreprocessing()\n",
     "X_scaled = scaler.fit_transform(X_train)\n",
     "vis = DataVisualization(X_scaled, plot_technique='scatter', dim_reduction_technique='PCA', n_components=2)\n",
@@ -210,7 +210,7 @@
    ],
    "source": [
     "# Confusion Matrix \n",
-    "from SADL.metrics_module import plot_confusion_matrix\n",
+    "from RADAR.metrics_module import plot_confusion_matrix\n",
     "plot_confusion_matrix(true,pred)"
    ]
   },
@@ -5614,7 +5614,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.12"
+   "version": "3.9.12"
   }
  },
  "nbformat": 4,
