--- a/notebooks_test/test_load_preprocess_datasets.ipynb
+++ b/notebooks_test/test_load_preprocess_datasets.ipynb
@@ -19,18 +19,154 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "2025-10-14 13:46:05.999969: I tensorflow/core/util/port.cc:153] oneDNN custom operations are on. You may see slightly different numerical results due to floating-point round-off errors from different computation orders. To turn them off, set the environment variable `TF_ENABLE_ONEDNN_OPTS=0`.\n",
-      "2025-10-14 13:46:06.019099: E external/local_xla/xla/stream_executor/cuda/cuda_fft.cc:477] Unable to register cuFFT factory: Attempting to register factory for plugin cuFFT when one has already been registered\n",
+      "2025-10-14 21:22:41.202722: I tensorflow/core/util/port.cc:153] oneDNN custom operations are on. You may see slightly different numerical results due to floating-point round-off errors from different computation orders. To turn them off, set the environment variable `TF_ENABLE_ONEDNN_OPTS=0`.\n",
+      "2025-10-14 21:22:41.214741: E external/local_xla/xla/stream_executor/cuda/cuda_fft.cc:477] Unable to register cuFFT factory: Attempting to register factory for plugin cuFFT when one has already been registered\n",
       "WARNING: All log messages before absl::InitializeLog() is called are written to STDERR\n",
-      "E0000 00:00:1760442366.043557   41081 cuda_dnn.cc:8310] Unable to register cuDNN factory: Attempting to register factory for plugin cuDNN when one has already been registered\n",
-      "E0000 00:00:1760442366.050605   41081 cuda_blas.cc:1418] Unable to register cuBLAS factory: Attempting to register factory for plugin cuBLAS when one has already been registered\n",
-      "2025-10-14 13:46:06.074916: I tensorflow/core/platform/cpu_feature_guard.cc:210] This TensorFlow binary is optimized to use available CPU instructions in performance-critical operations.\n",
+      "E0000 00:00:1760469761.230060   33110 cuda_dnn.cc:8310] Unable to register cuDNN factory: Attempting to register factory for plugin cuDNN when one has already been registered\n",
+      "E0000 00:00:1760469761.234000   33110 cuda_blas.cc:1418] Unable to register cuBLAS factory: Attempting to register factory for plugin cuBLAS when one has already been registered\n",
+      "2025-10-14 21:22:41.248498: I tensorflow/core/platform/cpu_feature_guard.cc:210] This TensorFlow binary is optimized to use available CPU instructions in performance-critical operations.\n",
       "To enable the following instructions: AVX2 AVX512F AVX512_VNNI FMA, in other operations, rebuild TensorFlow with the appropriate compiler flags.\n"
      ]
     }
    ],
    "source": [
     "from RADAR.static_data.static_datasets_uci import global_load"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Metadata: {'uci_id': 94, 'name': 'Spambase', 'repository_url': 'https://archive.ics.uci.edu/dataset/94/spambase', 'data_url': 'https://archive.ics.uci.edu/static/public/94/data.csv', 'abstract': 'Classifying Email as Spam or Non-Spam', 'area': 'Computer Science', 'tasks': ['Classification'], 'characteristics': ['Multivariate'], 'num_instances': 4601, 'num_features': 57, 'feature_types': ['Integer', 'Real'], 'demographics': [], 'target_col': ['Class'], 'index_col': None, 'has_missing_values': 'no', 'missing_values_symbol': None, 'year_of_dataset_creation': 1999, 'last_updated': 'Mon Aug 28 2023', 'dataset_doi': '10.24432/C53G6X', 'creators': ['Mark Hopkins', 'Erik Reeber', 'George Forman', 'Jaap Suermondt'], 'intro_paper': None, 'additional_info': {'summary': 'The \"spam\" concept is diverse: advertisements for products/web sites, make money fast schemes, chain letters, pornography...\\n\\nThe classification task for this dataset is to determine whether a given email is spam or not.\\n\\t\\nOur collection of spam e-mails came from our postmaster and individuals who had filed spam.  Our collection of non-spam e-mails came from filed work and personal e-mails, and hence the word \\'george\\' and the area code \\'650\\' are indicators of non-spam.  These are useful when constructing a personalized spam filter.  One would either have to blind such non-spam indicators or get a very wide collection of non-spam to generate a general purpose spam filter.\\n\\nFor background on spam: Cranor, Lorrie F., LaMacchia, Brian A.  Spam!, Communications of the ACM, 41(8):74-83, 1998.\\n\\nTypical performance is around ~7% misclassification error. False positives (marking good mail as spam) are very undesirable.If we insist on zero false positives in the training/testing set, 20-25% of the spam passed through the filter. See also Hewlett-Packard Internal-only Technical Report. External version forthcoming. ', 'purpose': None, 'funded_by': None, 'instances_represent': 'Emails', 'recommended_data_splits': None, 'sensitive_data': None, 'preprocessing_description': None, 'variable_info': 'The last column of \\'spambase.data\\' denotes whether the e-mail was considered spam (1) or not (0), i.e. unsolicited commercial e-mail.  Most of the attributes indicate whether a particular word or character was frequently occuring in the e-mail.  The run-length attributes (55-57) measure the length of sequences of consecutive capital letters.  For the statistical measures of each attribute, see the end of this file.  Here are the definitions of the attributes:\\r\\n\\r\\n48 continuous real [0,100] attributes of type word_freq_WORD \\r\\n= percentage of words in the e-mail that match WORD, i.e. 100 * (number of times the WORD appears in the e-mail) / total number of words in e-mail.  A \"word\" in this case is any string of alphanumeric characters bounded by non-alphanumeric characters or end-of-string.\\r\\n\\r\\n6 continuous real [0,100] attributes of type char_freq_CHAR] \\r\\n= percentage of characters in the e-mail that match CHAR, i.e. 100 * (number of CHAR occurences) / total characters in e-mail\\r\\n\\r\\n1 continuous real [1,...] attribute of type capital_run_length_average \\r\\n= average length of uninterrupted sequences of capital letters\\r\\n\\r\\n1 continuous integer [1,...] attribute of type capital_run_length_longest \\r\\n= length of longest uninterrupted sequence of capital letters\\r\\n\\r\\n1 continuous integer [1,...] attribute of type capital_run_length_total \\r\\n= sum of length of uninterrupted sequences of capital letters \\r\\n= total number of capital letters in the e-mail\\r\\n\\r\\n1 nominal {0,1} class attribute of type spam\\r\\n= denotes whether the e-mail was considered spam (1) or not (0), i.e. unsolicited commercial e-mail.  \\r\\n', 'citation': None}}\n",
+      "Variable information:                           name     role        type demographic  \\\n",
+      "0               word_freq_make  Feature  Continuous        None   \n",
+      "1            word_freq_address  Feature  Continuous        None   \n",
+      "2                word_freq_all  Feature  Continuous        None   \n",
+      "3                 word_freq_3d  Feature  Continuous        None   \n",
+      "4                word_freq_our  Feature  Continuous        None   \n",
+      "5               word_freq_over  Feature  Continuous        None   \n",
+      "6             word_freq_remove  Feature  Continuous        None   \n",
+      "7           word_freq_internet  Feature  Continuous        None   \n",
+      "8              word_freq_order  Feature  Continuous        None   \n",
+      "9               word_freq_mail  Feature  Continuous        None   \n",
+      "10           word_freq_receive  Feature  Continuous        None   \n",
+      "11              word_freq_will  Feature  Continuous        None   \n",
+      "12            word_freq_people  Feature  Continuous        None   \n",
+      "13            word_freq_report  Feature  Continuous        None   \n",
+      "14         word_freq_addresses  Feature  Continuous        None   \n",
+      "15              word_freq_free  Feature  Continuous        None   \n",
+      "16          word_freq_business  Feature  Continuous        None   \n",
+      "17             word_freq_email  Feature  Continuous        None   \n",
+      "18               word_freq_you  Feature  Continuous        None   \n",
+      "19            word_freq_credit  Feature  Continuous        None   \n",
+      "20              word_freq_your  Feature  Continuous        None   \n",
+      "21              word_freq_font  Feature  Continuous        None   \n",
+      "22               word_freq_000  Feature  Continuous        None   \n",
+      "23             word_freq_money  Feature  Continuous        None   \n",
+      "24                word_freq_hp  Feature  Continuous        None   \n",
+      "25               word_freq_hpl  Feature  Continuous        None   \n",
+      "26            word_freq_george  Feature  Continuous        None   \n",
+      "27               word_freq_650  Feature  Continuous        None   \n",
+      "28               word_freq_lab  Feature  Continuous        None   \n",
+      "29              word_freq_labs  Feature  Continuous        None   \n",
+      "30            word_freq_telnet  Feature  Continuous        None   \n",
+      "31               word_freq_857  Feature  Continuous        None   \n",
+      "32              word_freq_data  Feature  Continuous        None   \n",
+      "33               word_freq_415  Feature  Continuous        None   \n",
+      "34                word_freq_85  Feature  Continuous        None   \n",
+      "35        word_freq_technology  Feature  Continuous        None   \n",
+      "36              word_freq_1999  Feature  Continuous        None   \n",
+      "37             word_freq_parts  Feature  Continuous        None   \n",
+      "38                word_freq_pm  Feature  Continuous        None   \n",
+      "39            word_freq_direct  Feature  Continuous        None   \n",
+      "40                word_freq_cs  Feature  Continuous        None   \n",
+      "41           word_freq_meeting  Feature  Continuous        None   \n",
+      "42          word_freq_original  Feature  Continuous        None   \n",
+      "43           word_freq_project  Feature  Continuous        None   \n",
+      "44                word_freq_re  Feature  Continuous        None   \n",
+      "45               word_freq_edu  Feature  Continuous        None   \n",
+      "46             word_freq_table  Feature  Continuous        None   \n",
+      "47        word_freq_conference  Feature  Continuous        None   \n",
+      "48                 char_freq_;  Feature  Continuous        None   \n",
+      "49                 char_freq_(  Feature  Continuous        None   \n",
+      "50                 char_freq_[  Feature  Continuous        None   \n",
+      "51                 char_freq_!  Feature  Continuous        None   \n",
+      "52                 char_freq_$  Feature  Continuous        None   \n",
+      "53                 char_freq_#  Feature  Continuous        None   \n",
+      "54  capital_run_length_average  Feature  Continuous        None   \n",
+      "55  capital_run_length_longest  Feature  Continuous        None   \n",
+      "56    capital_run_length_total  Feature  Continuous        None   \n",
+      "57                       Class   Target      Binary        None   \n",
+      "\n",
+      "                 description units missing_values  \n",
+      "0                       None  None             no  \n",
+      "1                       None  None             no  \n",
+      "2                       None  None             no  \n",
+      "3                       None  None             no  \n",
+      "4                       None  None             no  \n",
+      "5                       None  None             no  \n",
+      "6                       None  None             no  \n",
+      "7                       None  None             no  \n",
+      "8                       None  None             no  \n",
+      "9                       None  None             no  \n",
+      "10                      None  None             no  \n",
+      "11                      None  None             no  \n",
+      "12                      None  None             no  \n",
+      "13                      None  None             no  \n",
+      "14                      None  None             no  \n",
+      "15                      None  None             no  \n",
+      "16                      None  None             no  \n",
+      "17                      None  None             no  \n",
+      "18                      None  None             no  \n",
+      "19                      None  None             no  \n",
+      "20                      None  None             no  \n",
+      "21                      None  None             no  \n",
+      "22                      None  None             no  \n",
+      "23                      None  None             no  \n",
+      "24                      None  None             no  \n",
+      "25                      None  None             no  \n",
+      "26                      None  None             no  \n",
+      "27                      None  None             no  \n",
+      "28                      None  None             no  \n",
+      "29                      None  None             no  \n",
+      "30                      None  None             no  \n",
+      "31                      None  None             no  \n",
+      "32                      None  None             no  \n",
+      "33                      None  None             no  \n",
+      "34                      None  None             no  \n",
+      "35                      None  None             no  \n",
+      "36                      None  None             no  \n",
+      "37                      None  None             no  \n",
+      "38                      None  None             no  \n",
+      "39                      None  None             no  \n",
+      "40                      None  None             no  \n",
+      "41                      None  None             no  \n",
+      "42                      None  None             no  \n",
+      "43                      None  None             no  \n",
+      "44                      None  None             no  \n",
+      "45                      None  None             no  \n",
+      "46                      None  None             no  \n",
+      "47                      None  None             no  \n",
+      "48                      None  None             no  \n",
+      "49                      None  None             no  \n",
+      "50                      None  None             no  \n",
+      "51                      None  None             no  \n",
+      "52                      None  None             no  \n",
+      "53                      None  None             no  \n",
+      "54                      None  None             no  \n",
+      "55                      None  None             no  \n",
+      "56                      None  None             no  \n",
+      "57  spam (1) or not spam (0)  None             no  \n"
+     ]
+    }
+   ],
+   "source": [
+    "X,y = global_load('spambase')\n"
    ]
   },
   {
@@ -42,7 +178,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -389,7 +525,7 @@
        "[451 rows x 280 columns]"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
