--- a/notebooks_test/test_experiments.ipynb
+++ b/notebooks_test/test_experiments.ipynb
@@ -2477,7 +2477,8 @@
     "print(\"X_train shape:\", X_train_windows.shape)\n",
     "print(\"y_train shape:\", y_train_windows.shape)\n",
     "print(\"X_test shape:\", X_test_windows.shape)\n",
-    "print(\"y_test shape:\", y_test_windows.shape)"
+    "print(\"y_test shape:\", y_test_windows.shape)\n",
+    "#test"
    ]
   },
   {
@@ -2701,7 +2702,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.12"
+   "version": "3.9.12"
   }
  },
  "nbformat": 4,
