unit tests completed

--- a/notebooks_test/test_example_addmodel.ipynb
+++ b/notebooks_test/test_example_addmodel.ipynb
@@ -355,16 +355,16 @@
     "        self.threshold = threshold\n",
     "\n",
     "    def fit(self, X, y=None):\n",
-    "        # Guardar la media como \"modelo simple\"\n",
+    "        # Save the average as a “simple model”\n",
     "        self.mean_ = np.mean(X, axis=0)\n",
     "        return self\n",
     "\n",
     "    def decision_function(self, X):\n",
-    "        # Score simple: distancia Euclídea a la media\n",
+    "        # Simple score: Euclidean distance to the mean\n",
     "        return np.linalg.norm(X - self.mean_, axis=1)\n",
     "\n",
     "    def predict(self, X):\n",
-    "        # Devuelve 1 si es anomalía, 0 si normal\n",
+    "        # 1 anomaly , 0 normal\n",
     "        scores = self.decision_function(X)\n",
     "        return (scores > self.threshold).astype(int)"
    ]
